[gd_scene load_steps=3 format=3 uid="uid://cn5pd4y0tcnlj"]

[ext_resource type="Script" path="res://Scenes/CanvasLayers/FormulaNotebook/NotebookEntry/notebook_entry_container.gd" id="1_hd0qs"]
[ext_resource type="Texture2D" uid="uid://clb3xejv2cbqu" path="res://Scenes/AlchemySpells/FireBall/Images/fireball_icon.png" id="1_opvky"]

[node name="HBoxContainer" type="HBoxContainer"]
script = ExtResource("1_hd0qs")

[node name="AssignButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Assign"

[node name="SpellIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_opvky")

[node name="FormulaName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Fireball"

[connection signal="pressed" from="AssignButton" to="." method="_on_assign_button_pressed"]
